--- a/index.html
+++ b/index.html
@@ -27,6 +27,26 @@
     </div>
   </header>
 
+  <section>
+    <div class="section-1">
+      <div class="container flex">
+        <div class="text-container">
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>Fylo stores your most important files in one secure location.
+            Access them wherever you need, share and collaborate with friends,
+            family, and co-workers.</p>
+          <form class=" form-top flex" action="">
+            <input class="email" type="email" placeholder="Enter your email...">
+            <input class="cta" type="submit" value="Get Started">
+          </form>
+        </div>
+        <div class="illustration">
+          <img src="/images/illustration-1.svg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
+
 
 
 
