--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
   </section>
-  <!-- <div class="sec2__wave">
+  <div class="sec2__wave">
     <picture>
       <source media="(min-width:650px)" srcset="/images/bg-curve-mobile.svg">
       <source media="(min-width:465px)" srcset="img_white_flower.jpg">
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
 
 
 
